[package]
name = "typst-py"
version = "0.13.3"
edition = "2021"
description = "Python binding to typst"
license = "Apache-2.0"
repository = "https://github.com/messense/typst-py"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = [
    "clock",
    "std",
] }
codespan-reporting = "0.12"
comemo = "0.4.0"
ecow = "0.2"
pathdiff = "0.2"
pyo3 = { version = "0.25.1", features = ["abi3-py38", "generate-import-lib"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
typst = "0.13.1"
typst-kit = { version = "0.13.1", features = [
    "downloads",
    "embed-fonts",
    "vendor-openssl",
] }
typst-pdf = "0.13.1"
typst-svg = "0.13.0"
typst-render = "0.13.1"
typst-eval = "0.13.0"
typst-html = "0.13.1"
