[package]
name = "typst-py"
version = "0.14.7"
edition = "2024"
description = "Python binding to typst"
license = "Apache-2.0"
repository = "https://github.com/messense/typst-py"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = [
  "clock",
  "std",
] }
codespan-reporting = "0.13"
comemo = "0.5.0"
ecow = "0.2"
pathdiff = "0.2"
pyo3 = { version = "0.27.1", features = ["abi3-py38", "generate-import-lib"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
typst = "0.14.2"
typst-kit = { version = "0.14.2", features = [
  "downloads",
  "embed-fonts",
  "vendor-openssl",
] }
typst-pdf = "0.14.2"
typst-svg = "0.14.2"
typst-render = "0.14.2"
typst-eval = "0.14.2"
typst-html = "0.14.2"
rustc-hash = "2.1.1"
