[package]
name = "typst-py"
version = "0.15.0"
edition = "2024"
description = "Python binding to typst"
license = "Apache-2.0"
repository = "https://github.com/messense/typst-py"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = [
  "clock",
  "std",
] }
codespan-reporting = "0.13"
comemo = "0.5.1"
ecow = "0.2"
pathdiff = "0.2"
pyo3 = { version = "0.29", features = ["abi3-py38", "chrono"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
typst = "0.15.0"
typst-kit = { version = "0.15.0", features = [
  "embedded-fonts",
  "scan-fonts",
  "system-downloader",
  "system-packages",
  "vendor-openssl",
] }
typst-pdf = "0.15.0"
typst-svg = "0.15.0"
typst-render = "0.15.0"
typst-eval = "0.15.0"
typst-html = "0.15.0"
typst-layout = "0.15.0"
rustc-hash = "2.1.2"
